--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "react": "^17.0.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@testing-library/user-event": "^14.1.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.2",
+    "moment-timezone": "^0.5.34",
+    "rc-table": "^7.24.1",
+    "react": "^18.0.0",
     "react-bootstrap-validation": "^0.1.11",
-    "react-dom": "^17.0.2",
-    "react-moment": "^1.1.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-table": "^7.7.0",
-    "web-vitals": "^1.1.2"
+    "react-dom": "^18.0.0",
+    "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
