--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,14 @@
 # get the base node image
-FROM node as builder
+FROM node:alpine
 
 WORKDIR /app
 
-COPY ./package.json /app
+COPY package.json .
 
 RUN npm install
 
 COPY . .
 
-CMD [ "npm", "run", "start" ]
+EXPOSE 3000
+
+CMD [ "npm", "start" ]
